src/OcctNative/OcctNative.h

    struct OcctPoint3d { double x; double y; double z; };
    struct OcctVector3d { double x; double y; double z; };
    struct OcctProjectionRay { OcctPoint3d origin; OcctVector3d direction; };
    OCCTBRIDGE_API int occt_fit_objects(OcctHandle handle, const OcctObjectId* objectIds, int count, double margin);
    OCCTBRIDGE_API int occt_set_zup_view(OcctHandle handle, int orientation, int fitAll);
    OCCTBRIDGE_API int occt_screen_to_ray(OcctHandle handle, int x, int y, OcctProjectionRay* result);
    OCCTBRIDGE_API int occt_zoom_at_point(OcctHandle handle, int x, int y, double delta);
    OCCTBRIDGE_API int occt_select_all_visible(OcctHandle handle);
    OCCTBRIDGE_API int occt_invert_selection(OcctHandle handle);
    OCCTBRIDGE_API int occt_hide_selected(OcctHandle handle);
    OCCTBRIDGE_API int occt_set_automatic_highlight(OcctHandle handle, int enabled);
    OCCTBRIDGE_API int occt_set_msaa_samples(OcctHandle handle, int samples);
    OCCTBRIDGE_API int occt_set_render_resolution_scale(OcctHandle handle, double scale);
    OCCTBRIDGE_API int occt_set_render_resolution(OcctHandle handle, double dpi);
    OCCTBRIDGE_API int occt_set_rendering_method(OcctHandle handle, int method);
    OCCTBRIDGE_API int occt_set_shadows_enabled(OcctHandle handle, int enabled);
    OCCTBRIDGE_API int occt_set_immediate_update(OcctHandle handle, int enabled);
    OCCTBRIDGE_API int occt_set_frustum_culling(OcctHandle handle, int enabled);
    OCCTBRIDGE_API int occt_set_face_boundaries_visible(OcctHandle handle, int visible, int applyExisting);